syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package br.com.zup;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service KeyManagerRegistraService {
  rpc cadastraChave (NovaChaveRequest) returns (NovaChaveResponse) {}
}
service KeyManagerRemoveService{
  rpc removeChave (RemoveChaveRequest) returns (google.protobuf.Empty){}
}
service KeyManagerDetalhaService{
  rpc encontraChave (EncontraChaveRequest) returns (EncontraChaveResponse){}
}
service KeyManagerListaService{
  rpc listaChave (ListaChaveRequest) returns (ListaChaveResponse){}
}

message NovaChaveRequest {
  string clienteId    = 1;
  TipoChave tipoChave = 2;
  string chave        = 3;
  TipoConta tipoConta = 4;
}

message RemoveChaveRequest {
  string clienteId = 1;
  int64 pixId      = 2;
}

enum TipoChave{
  CHAVE_DESCONHECIDA = 0;
  CPF                = 1;
  TELEFONE           = 2;
  EMAIL              = 3;
  CNPJ               = 4;
  ALEATORIA          = 5;
}
enum TipoConta{
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE     = 1;
  CONTA_POUPANCA     = 2;
}

message NovaChaveResponse {
  int64 pixId = 1;
}

message EncontraChaveRequest {
  message FiltroPorPixId {
    string clienteId = 1;
    string pixId     = 2;
  }

  oneof filtro {
    FiltroPorPixId pixId  = 1;
    string chave          = 2;
  }
}

message EncontraChaveResponse{
  message ChavePix {

    message ContaInfo {
      TipoConta tipo       = 1;
      string instituicao   = 2; /** ITAU UNIBANCO */
      string nomeDoTitular = 3;
      string cpfDoTitular  = 4;
      string agencia       = 5;
      string numeroDaConta = 6;
    }

    TipoChave tipo          = 1;
    string chave            = 2;
    ContaInfo conta         = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  string pixId     = 2;
  ChavePix chave   = 3;
}

message ChaveResponse{
  string pixId                       = 1;
  string clienteId                   = 2;
  TipoChave tipoChave                = 3;
  string chave                       = 4;
  TipoConta tipoConta                = 5;
  google.protobuf.Timestamp criadaEm = 6;
}
message ListaChaveResponse{
  repeated ChaveResponse chaves = 1;
}

message ListaChaveRequest{
  string clienteId = 1;
}